ft: report revenue
